Completion of javadoc and comments. Starting test cases